--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,13 @@
 body {
   background-color: #f9f7fe;
-  font-family: sans-serif;
+  font-family: "PT Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
 }
+
 h1 {
   text-align: center;
-  font-family: sans-serif;
+  font-family: "PT Mono", monospace;
   font-size: 36px;
 }
 h2 {
@@ -24,7 +27,7 @@ select {
 .container {
   max-width: 600px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  background: white;
+  background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
   padding: 30px;
   border-radius: 10px;
   margin: 60px auto;
